# subs_market

./: .env.example  01_aiogram_best_practices.txt  02_async_database_patterns.txt  03_production_checklist.txt  CODE_REVIEW.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: ebc456a3cf84_initial_migration.py
new_bot/: .cursorrules.txt  .env  bot.py  crash_log.txt  create_tables.py  db_init_log.txt  db_init_log_2.txt  db_init_log_3.txt  db_reset_log.txt  db_seed_log_2.txt  docker-compose.yml  requirements.txt  run_bot.bat
new_bot/docs/: 00_execution_rules.md  01_product_brief.md  02_engineering_contract.md  03_domain_model.md  04_state_machines.md  05_core_services.md  06_use_cases.md  07_telegram_adapter.md  08_operations.md  09_mvp_scope.md  10_smoke_test_plan.md
new_bot/scripts/: init_db.py
new_bot/src/application/: dtos.py  errors.py
new_bot/src/application/interfaces/: unit_of_work.py
new_bot/src/application/use_cases/: __init__.py  approve_member.py  confirm_payment.py  create_club.py  ensure_user.py  get_club_details.py  get_user_clubs.py  join_club.py  link_group_by_token.py  mark_overdue.py  open_billing_period.py  raise_dispute.py  remove_member.py  resolve_dispute.py  search_clubs.py  submit_payment_proof.py
new_bot/src/domain/entities/: __init__.py  billing_period.py  club.py  club_group.py  club_member.py  dispute.py  user.py  (+8 more)
src/: config.py  main.py
src/database/: models.py  repo.py
src/handlers/: admin.py  user.py
src/keyboards/: main_menu.py
src/middlewares/: db_session.py
(+58 files in other folders)
