[tool.poetry]
name = "telegram-bot-project"
version = "0.1.0"
description = "Telegram Bot 2025 Edition"
authors = ["Your Name <your@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.0"
pydantic-settings = "^2.0"
sqlalchemy = "^2.0"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
redis = "^5.0.0"
structlog = "^24.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
